# DeepLib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  DeepLibConfig.cmake.in  GOALS.md  README.md
DeepCore/: CMakeLists.txt  README.md
DeepCore/DeepCore/: context.hpp  display.cpp  display.hpp  error.hpp  event.cpp  event.hpp  filesystem.cpp  filesystem.hpp  memory.cpp  memory.hpp  system.hpp  term.cpp  term.hpp  thread.cpp  thread.hpp  time.cpp  time.hpp  types.hpp  vkeys.cpp  vkeys.hpp  window.cpp  window.hpp
DeepCore/DeepCore/string/: unicode.cpp  unicode.hpp  utf8.cpp  utf8.hpp
DeepCore/DeepCore/windows/: context.cpp  display.cpp  error.cpp  event.cpp  filesystem.cpp  internal_data.hpp  memory.cpp  term.cpp  thread.cpp  time.cpp  window.cpp
DeepLib/: CMakeLists.txt
DeepLib/DeepLib/: context.cpp  context.hpp  lib.cpp  lib.hpp  object.cpp  object.hpp  window.cpp  window.hpp
DeepLib/DeepLib/collection/: array_list.hpp  collection.hpp  hash_map.hpp  linked_list.hpp  list.hpp  queue.hpp
DeepLib/DeepLib/filesystem/: filesystem.cpp  filesystem.hpp
DeepLib/DeepLib/image/: image.cpp  image.hpp  png.cpp  png.hpp
DeepLib/DeepLib/maths/: color.cpp  color.hpp  limit.hpp  mat.hpp  mat4.hpp  math.cpp  math.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
DeepLib/DeepLib/memory/: buffer_ptr.hpp  managed_ptr.hpp  mem_ptr.hpp  memory.hpp  memory_manager.hpp  owned_ptr.hpp  ref_counted.hpp
DeepLib/DeepLib/multithreading/: event.cpp  event.hpp  thread.cpp  thread.hpp
DeepLib/DeepLib/stream/: file_stream.cpp  file_stream.hpp  memory_stream.cpp  memory_stream.hpp  stream.hpp  stream_writer.cpp  stream_writer.hpp  text_writer.cpp  text_writer.hpp
DeepLib/DeepLib/string/: string.cpp  string.hpp  string_base.hpp  string_native.hpp  string_utils.cpp  string_utils.hpp
DeepLib/DeepLib/time/: time.cpp  time.hpp
DeepLib/DeepLib/utils/: bitmask.hpp  bitset.hpp
DeepLib/DeepLib/window/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
Source/: CMakeLists.txt  CMakeSettings.json  compile_commands.json  context.cpp  context.hpp  deep.cpp  deep.hpp  lib.cpp  lib.hpp
Source/DeepCore/: CMakeLists.txt  context.cpp  context.hpp  core.cpp  core.hpp  error.hpp  filesystem.cpp  filesystem.hpp  memory.cpp  memory.hpp  types.hpp
Source/DeepCore/string/: unicode.hpp  utf8.cpp  utf8.hpp
Source/DeepCore/unix/: error.cpp  filesystem.cpp  memory.cpp
Source/DeepCore/windows/: context.cpp  core.cpp  filesystem.cpp  internal_data.hpp  memory.cpp
Source/Test/: test_alloc_mem.cpp  test_get_cwd.cpp  test_list.cpp  test_owned_ptr.cpp  test_ref_counted.cpp  test_string1.cpp  test_string_native.cpp  test_system.cpp
Source/collection/: collection.hpp  list.hpp
Source/memory/: buffer_ptr.hpp  managed_ptr.hpp  mem_ptr.hpp  memory.hpp  memory_manager.cpp  memory_manager.hpp  ref_counted.cpp  ref_counted.hpp
Source/string/: string.hpp  string_base.hpp  string_native.hpp
Test/: test_alloc_mem.cpp  test_get_cwd.cpp  test_hash_map.cpp  test_list.cpp  test_owned_ptr.cpp  test_ref_counted.cpp  test_string1.cpp  test_string_native.cpp
Test/collection/: test_hash_map.cpp  test_linked_list.cpp  test_list.cpp  test_queue.cpp
Test/image/: test_apply_luminance.cpp  test_apply_palette.cpp  test_png.cpp
Test/maths/: test_mat4.cpp  test_math.cpp  test_vec2.cpp  test_vec3.cpp
Test/multithreading/: test_thread.cpp
Test/stream/: test_file_stream.cpp  test_memory_stream.cpp
Test/string/: test_executable_path.cpp  test_string1.cpp  test_string2.cpp  test_string_native.cpp
Test/utils/: test_bitmask.cpp  test_bitset.cpp
cmake/: AddCompileOptions.cmake  CreateTest.cmake
